--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,3 @@
-
 <!-- START MAIN CONTENT -->
 <div class="main_content">
 
@@ -8,18 +7,23 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="about_img scene mb-4 mb-lg-0">
-                        <img src="assets/images/about_img.jpg" alt="about_img" />
+                        <img src="assets/imgBG/logo2.jpeg" alt="about_img" />
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="heading_s1">
-                        <h2>Who We are</h2>
+                        <h2>Qui sommes-nous</h2>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. consequuntur quibusdam enim expedita sed
-                        nesciunt incidunt accusamus adipisci officia libero laboriosam!</p>
-                    <p>Proin gravida nibh vel velit auctor aliquet. nec sagittis sem nibh id elit. Duis sed odio sit
-                        amet nibh vultate cursus a sit amet mauris. Duis sed odio sit amet nibh vultate cursus a sit
-                        amet mauris.</p>
+                    <p>Bamako Gadgets est votre boutique en ligne spécialisée dans la vente de gadgets électroniques,
+                        d’accessoires high-tech et de produits innovants à Bamako. Nous vous proposons des produits de
+                        qualité,
+                        au meilleur prix, avec un service client à l’écoute et une livraison rapide partout au Mali.</p>
+                    <p>Rejoignez-nous dès aujourd'hui et découvrez notre sélection de gadgets électroniques et
+                        d'accessoires high-tech. Que vous soyez un passionné de technologie ou simplement à la
+                        recherche de produits pratiques et innovants, Bamako Gadgets est là pour vous accompagner dans
+                        votre quête de la meilleure expérience d'achat en ligne.</p>
+                    <p>Choisissez Bamako Gadgets, votre partenaire technologique à Bamako !</p>
+                    <a [routerLink]="['/shop']" class="btn btn-fill-out">En savoir plus</a>
                 </div>
             </div>
         </div>
@@ -32,50 +36,65 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8">
                     <div class="heading_s1 text-center">
-                        <h2>Why Choose Us?</h2>
+                        <h2>Qui sommes-nous</h2>
                     </div>
-                    <p class="text-center leads">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore.</p>
+                    <p class="text-center leads">
+                        Bamako Gadgets est une equipe de passionnés de technologie et d'innovation, dédiée à
+                        fournir les meilleurs gadgets électroniques et accessoires high-tech à nos clients.
+                    </p>
                 </div>
             </div>
             <div class="row justify-content-center">
+                <!-- Vente & prestation -->
                 <div class="col-lg-4 col-sm-6">
                     <div class="icon_box icon_box_style4 box_shadow1">
                         <div class="icon">
-                            <i class="ti-pencil-alt"></i>
+                            <i class="ti-shopping-cart"></i>
                         </div>
                         <div class="icon_box_content">
-                            <h5>Creative Design</h5>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                suffered alteration in some form</p>
+                            <h5>Vente & prestation</h5>
+                            <p>
+                                Nous proposons une large gamme de produits high-tech de qualité ainsi que des
+                                prestations sur mesure pour répondre à vos besoins spécifiques.
+                            </p>
                         </div>
                     </div>
                 </div>
+
+                <!-- Assistance 24h/24 -->
                 <div class="col-lg-4 col-sm-6">
                     <div class="icon_box icon_box_style4 box_shadow1">
                         <div class="icon">
-                            <i class="ti-layers"></i>
+                            <i class="fas fa-cogs"></i>
                         </div>
                         <div class="icon_box_content">
-                            <h5>Flexible Layouts</h5>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                suffered alteration in some form</p>
+                            <h5>Installation & Suivi</h5>
+                            <p>
+                                Nous offrons un service d'installation et de suivi pour garantir que vos produits
+                                fonctionnent parfaitement et répondent à vos attentes.
+                            </p>
                         </div>
                     </div>
                 </div>
+
+                <!-- Livraison -->
                 <div class="col-lg-4 col-sm-6">
                     <div class="icon_box icon_box_style4 box_shadow1">
                         <div class="icon">
-                            <i class="ti-email"></i>
+                            <i class="fas fa-bullhorn"></i>
                         </div>
                         <div class="icon_box_content">
-                            <h5>Email Marketing</h5>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                suffered alteration in some form</p>
+                            <h5>Assistance Marketing Digital</h5>
+                            <p>
+                                Nous vous accompagnons dans la promotion de vos produits et services en ligne, en
+                                utilisant les dernières tendances du marketing digital pour maximiser votre visibilité
+                                et vos ventes.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
     <!-- END SECTION WHY CHOOSE -->
@@ -86,96 +105,95 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="heading_s1 text-center">
-                        <h2>Our Team Members</h2>
+                        <h2>Les membres de notre équipe</h2>
                     </div>
-                    <p class="text-center leads">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore.</p>
+                    <p class="text-center leads">
+                        Notre équipe est composée de professionnels passionnés par la technologie.
+                        Chacun de nos membres apporte son expertise
+                        unique pour vous offrir une expérience d’achat en ligne fiable, rapide et personnalisée.
+                    </p>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-sm-6">
                     <div class="team_box team_style1">
                         <div class="team_img">
-                            <img src="assets/images/team_img1.jpg" alt="team_img1">
+                            <img src="assets/imgBG/IS.jpeg" alt="team_img1">
                             <ul class="social_icons social_style1">
-                                <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-                                <li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
+                                <li>
+                                    <a href="https://www.linkedin.com/in/ibrahim-sogore-9505b3238?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.facebook.com/share/1LbPKJvBt3/">
+                                        <i class="ion-social-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/sogore_dev?igsh=MThhanBsZ3JqNmw5cw==">
+                                        <i class="ion-social-instagram-outline"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.tiktok.com/@bamakogadgets" target="_blank">
+                                        <i class="fab fa-tiktok"></i>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                         <div class="team_content">
                             <div class="team_title">
-                                <h5>John Muniz</h5>
-                                <span>Project Engineer</span>
+                                <h5>Ibrahim SOGORE</h5>
+                                <span>Developpeur FullStack</span>
                             </div>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-3 col-sm-6">
                     <div class="team_box team_style1">
                         <div class="team_img">
-                            <img src="assets/images/team_img2.jpg" alt="team_img2">
-                            <ul class="social_icons social_style4">
-                                <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-                                <li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
+                            <img src="assets/imgBG/IS.jpeg" alt="team_img1">
+                            <ul class="social_icons social_style1">
+                                <li>
+                                    <a href="https://www.linkedin.com/in/ibrahim-sogore-9505b3238?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.facebook.com/share/1LbPKJvBt3/">
+                                        <i class="ion-social-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/sogore_dev?igsh=MThhanBsZ3JqNmw5cw==">
+                                        <i class="ion-social-instagram-outline"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.tiktok.com/@bamakogadgets" target="_blank">
+                                        <i class="fab fa-tiktok"></i>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                         <div class="team_content">
                             <div class="team_title">
-                                <h5>Alea Brooks</h5>
-                                <span>Graphics Designer</span>
+                                <h5>Ibrahim SOGORE</h5>
+                                <span>Developpeur FullStack</span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="team_box team_style1">
-                        <div class="team_img">
-                            <img src="assets/images/team_img3.jpg" alt="team_img3">
-                            <ul class="social_icons social_style4">
-                                <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-                                <li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="team_content">
-                            <div class="team_title">
-                                <h5>Anders Glick</h5>
-                                <span>Software Developer</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="team_box team_style1">
-                        <div class="team_img">
-                            <img src="assets/images/team_img4.jpg" alt="team_img4">
-                            <ul class="social_icons social_style4">
-                                <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-                                <li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="team_content">
-                            <div class="team_title">
-                                <h5>Richard Tice</h5>
-                                <span>Web Developer</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
     <!-- END SECTION TEAM -->
 
     <!-- START SECTION TESTIMONIAL -->
-    <div class="section bg_redon">
+    <!-- <div class="section bg_redon">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6">
@@ -257,7 +275,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- END SECTION TESTIMONIAL -->
 
     <!-- START SECTION SHOP INFO -->
@@ -270,8 +288,9 @@
                             <i class="flaticon-shipped"></i>
                         </div>
                         <div class="icon_box_content">
-                            <h5>Free Delivery</h5>
-                            <p>If you are going to use of Lorem, you need to be sure there anything</p>
+                            <h5>Livraison Gratuite</h5>
+                            <p>rofitez d’un service de livraison rapide et sécurisé partout à Bamako, 
+                                avec la garantie que vos produits vous parviennent en parfait état.</p>
                         </div>
                     </div>
                 </div>
@@ -281,8 +300,9 @@
                             <i class="flaticon-money-back"></i>
                         </div>
                         <div class="icon_box_content">
-                            <h5>30 Day Return</h5>
-                            <p>If you are going to use of Lorem, you need to be sure there anything</p>
+                            <h5>Retour sous 15 jours</h5>
+                            <p>Parce que votre satisfaction est notre priorité, vous disposez de 15 jours pour 
+                                retourner vos articles, sans frais et en toute simplicité, si vous changez d'avis.</p>
                         </div>
                     </div>
                 </div>
@@ -292,8 +312,9 @@
                             <i class="flaticon-support"></i>
                         </div>
                         <div class="icon_box_content">
-                            <h5>27/4 Support</h5>
-                            <p>If you are going to use of Lorem, you need to be sure there anything</p>
+                            <h5>24H/24 Support</h5>
+                            <p>Notre équipe de support est disponible à tout moment pour répondre 
+                                à vos questions et vous aider à chaque étape de votre commande.</p>
                         </div>
                     </div>
                 </div>
