--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -11,8 +11,8 @@
                             <i class="linearicons-map2"></i>
                         </div>
                         <div class="contact_text">
-                            <span>Address</span>
-                            <p></p>
+                            <span>Adresse de la boutique</span>
+                            <p>Bamako Coura, près du Boulevard de l’Indépendance</p>
                         </div>
                     </div>
                 </div>
@@ -22,10 +22,11 @@
                             <i class="linearicons-envelope-open"></i>
                         </div>
                         <div class="contact_text">
-                            <span>Email Address</span>
-                            <a href="mailto:"> </a>
+                            <span>Email</span>
+                            <a href="mailto:info@bamakogadgets.com">info&#64;bamakogadgets.com</a>
                         </div>
                     </div>
+
                 </div>
                 <div class="col-xl-4 col-md-6">
                     <div class="contact_wrap contact_style3">
@@ -33,8 +34,8 @@
                             <i class="linearicons-tablet2"></i>
                         </div>
                         <div class="contact_text">
-                            <span>Phone</span>
-                            <p></p>
+                            <span>Téléphone (+223)</span>
+                            <p>84 00 89 69 <br> 83 52 28 56 <br> 69 28 21 97 </p>
                         </div>
                     </div>
                 </div>
@@ -49,44 +50,40 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="heading_s1">
-                        <h2>Get In touch</h2>
+                        <h2>Écrire à Bamako Gadget</h2>
                     </div>
-                    <p class="leads">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa
-                        enim. Nullam id varius nunc id varius nunc.</p>
+                    <p class="leads"></p>
                     <div class="field_form">
                         <form method="post" name="enq">
                             <div class="row">
                                 <div class="form-group col-md-6 mb-3">
-                                    <input required placeholder="Enter Name *" id="first-name" class="form-control"
+                                    <input required placeholder="Entrer votre nom *" id="first-name" class="form-control"
                                         name="name" type="text">
                                 </div>
                                 <div class="form-group col-md-6 mb-3">
-                                    <input required placeholder="Enter Email *" id="email" class="form-control"
+                                    <input placeholder="Entrer votre prenom" id="prenom" class="form-control" name="prenom">
+                                </div>
+                                <div class="form-group col-md-6 mb-3">
+                                    <input required placeholder="Entrer votre Email *" id="email" class="form-control"
                                         name="email" type="email">
                                 </div>
                                 <div class="form-group col-md-6 mb-3">
-                                    <input required placeholder="Enter Phone No. *" id="phone" class="form-control"
+                                    <input required placeholder="Entrer votre numéro No. *" id="phone" class="form-control"
                                         name="phone">
-                                </div>
-                                <div class="form-group col-md-6 mb-3">
-                                    <input placeholder="Enter Subject" id="subject" class="form-control" name="subject">
                                 </div>
                                 <div class="form-group col-md-12 mb-3">
                                     <textarea required placeholder="Message *" id="description" class="form-control"
                                         name="message" rows="4"></textarea>
                                 </div>
                                 <div class="col-md-12 mb-3">
-                                    <button type="submit" title="Submit Your Message!" class="btn btn-fill-out"
-                                        id="submitButton" name="submit" value="Submit">Send Message</button>
-                                </div>
-                                <div class="col-md-12 mb-3">
-                                    <div id="alert-msg" class="alert-msg text-center"></div>
+                                    <button  title="Submit Your Message!" class="btn btn-fill-out"
+                                        id="submitButton" name="submit" >Envoyer votre Message</button>
                                 </div>
                             </div>
                         </form>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
