--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -17,10 +17,8 @@
                             <div  aria-labelledby="headingOne" data-bs-parent="#accordion"
                                 class="collapse show" id="collapse_646b9f66b784edcd409731fc">
                                 <div  class="card-body">
-                                    <p>Une fois votre commande expédiée, vous recevrez un e-mail de confirmation
-                                        contenant un numéro de suivi. Vous pouvez utiliser ce numéro pour suivre
-                                        l'acheminement de votre colis sur le site du transporteur ou en nous contactant
-                                        directement pour obtenir des informations sur l'état de votre commande.</p>
+                                    <p>Dès que votre colis est prêt à être livré, 
+                                        vous serez contacté par téléphone pour préciser les détails du lieu de livraison.</p>
                                 </div>
                             </div>
                         </div>
@@ -47,13 +45,13 @@
                                 <h6  class="mb-0"><a 
                                         data-bs-toggle="collapse" aria-expanded="true" aria-controls="collapseOne"
                                         class="collapsed" href="#collapse_646b9f86b784edcd40973200"> Est-ce que vous
-                                        expédiez à l'international ? </a></h6>
+                                        expédiez dans les regions ou à l'international ? </a></h6>
                             </div>
                             <div  aria-labelledby="headingOne" data-bs-parent="#accordion"
                                 class="collapse show" id="collapse_646b9f86b784edcd40973200">
                                 <div  class="card-body">
-                                    <p>Oui, nous expédions nos produits dans de nombreux pays à travers le monde. Lors
-                                        du processus de commande, veuillez indiquer votre pays de livraison pour
+                                    <p>Oui, nous expédions nos produits dans de nombreux regions et pays à travers le monde. Lors
+                                        du processus de commande, veuillez indiquer votre region ou pays de livraison pour
                                         vérifier si nous pouvons expédier dans votre région.</p>
                                 </div>
                             </div>
@@ -68,10 +66,10 @@
                             <div  aria-labelledby="headingOne" data-bs-parent="#accordion"
                                 class="collapse show" id="collapse_646b9f94b784edcd40973202">
                                 <div  class="card-body">
-                                    <p>Une fois votre commande expédiée, nous vous enverrons la facture par e-mail. Si
-                                        vous ne trouvez pas votre facture, veuillez vérifier votre dossier de courrier
-                                        indésirable (spam). Si vous ne parvenez toujours pas à la trouver, veuillez nous
-                                        contacter et nous serons heureux de vous aider.</p>
+                                    <p>Une fois votre commande expédiée, 
+                                        la facture vous sera remise directement lors de la livraison. 
+                                        Si vous ne la recevez pas avec votre colis, 
+                                        n'hésitez pas à nous contacter, nous serons heureux de vous la renvoyer.</p>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +109,7 @@
                 </div>
                 <div  class="col-md-6 mt-4 mt-md-0">
                     <div  class="heading_s1 mb-3 mb-md-5">
-                        <h3 >Other questions</h3>
+                        <h3 >Autres questions</h3>
                     </div>
                     <div  id="accordion2" class="accordion accordion_style1">
                         <div  class="card">
@@ -124,9 +122,11 @@
                             <div  aria-labelledby="headingOne" data-bs-parent="#accordion"
                                 class="collapse show" id="collapse_646b9f21b784edcd40973182">
                                 <div  class="card-body">
-                                    <p>Nous acceptons les paiements par carte de crédit (Visa, Mastercard, American
-                                        Express), PayPal et virement bancaire. Vous pouvez sélectionner votre mode de
-                                        paiement préféré lors du processus de commande.</p>
+                                    <p>Nous acceptons les paiements à la livraison ainsi 
+                                        que par Orange Money au numéro +223 84008969 ou le retrait sur votre compte Orange Money. 
+                                        Vous pourrez choisir votre mode de paiement préféré 
+                                        lors de la validation de votre commande.</p>
+
                                 </div>
                             </div>
                         </div>
@@ -141,9 +141,7 @@
                                 class="collapse show" id="collapse_646b9f35b784edcd409731a6">
                                 <div  class="card-body">
                                     <p>Les délais de livraison dépendent de votre adresse de livraison et du produit
-                                        commandé. Nous nous efforçons de livrer vos articles dans les plus brefs délais.
-                                        Vous pouvez trouver des informations détaillées sur les délais de livraison
-                                        estimés sur la&nbsp;</p>
+                                        commandé. Nous nous efforçons de livrer vos articles dans les plus brefs délais.</p>
                                 </div>
                             </div>
                         </div>
