--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,79 +4,81 @@
             <div  class="row">
                 <div  class="col-lg-3 col-md-6 col-sm-12">
                     <div  class="widget">
-                        <div  class="footer_logo"><a  href="#">
-                                <h2 >Jstore</h2>
-                            </a></div>
-                        <p > Retrouvez tous les accessoires et habits pour femmes, jeunes
-                            filles etc... </p>
+                        <div  class="footer_logo"><a  href="/">
+                                <h2 >Bamako Gadgets</h2>
+                            </a>
+                        </div>
+                            <p>
+                                Bamako Gadgets est votre référence en produits high-tech et services numériques au Mali.
+                                Nous vous proposons des articles de qualité, un service client réactif, et une expérience d’achat simple et
+                                sécurisée.
+                            </p> 
                     </div>
                     <div  class="widget">
                         <ul  class="social_icons social_white">
                             <li ><a  target="_blank"
-                                    href="https://facebook.com"><i 
+                                    href="https://www.facebook.com/share/168XvqUiHp/"><i 
                                         class="ion-social-facebook"></i></a>
                             </li>
                             <li ></li>
                             <li ></li>
                             <li ><a  target="_blank"
-                                    href="https://www.youtube.com/channel/UCkqALrIVPEyGnnbmiFl3lQA/?sub_confirmation=1"><i
+                                    href="https://youtube.com/@bamakogadgets?si=veyN5CQmNDCHuQRg"><i
                                          class="ion-social-youtube-outline"></i></a>
                             </li>
                             <li ><a  target="_blank"
-                                    href="https://www.instagram.com/mudey_formation/"><i 
+                                    href="#"><i 
                                         class="ion-social-instagram-outline"></i></a>
                             </li>
+                            <li>
+                                    <a href="https://www.tiktok.com/@bamakogadgets" target="_blank">
+                                        <i class="fab fa-tiktok"></i>
+                                    </a>
+                                </li>
                         </ul>
                     </div>
                 </div>
                 <div  class="col-lg-2 col-md-3 col-sm-6">
                     <div  class="widget">
-                        <h6  class="widget_title">Useful Links</h6>
+                        <h6  class="widget_title">Liens utiles</h6>
                         <ul  class="widget_links">
                             <li ><a 
-                                    ng-reflect-router-link="/page,a-propos-de-nous-shop"
-                                    href="/page/a-propos-de-nous-shop">A Propos de nous</a></li>
+                                    ng-reflect-router-link="/about"
+                                    href="/about">A Propos de nous</a></li>
                             <li ><a 
-                                    ng-reflect-router-link="/page,nos-services-jstore"
-                                    href="/page/nos-services-jstore">Nos services</a></li>
+                                    ng-reflect-router-link="/about"
+                                    href="/about">Nos services</a></li>
                             <li ><a 
-                                    ng-reflect-router-link="/page,contactez-nous-category"
-                                    href="/page/contactez-nous-category">Contactez-Nous</a></li>
+                                    ng-reflect-router-link="/contact"
+                                    href="/contact">Contactez-Nous</a></li>
                             <li ><a 
-                                    ng-reflect-router-link="/page,nos-partenaires-mudey"
-                                    href="/page/nos-partenaires-mudey">Nos partenaires</a></li>
-                            <li ><a 
-                                    ng-reflect-router-link="/page,mentions-lgales-espero"
-                                    href="/page/mentions-lgales-espero">Mentions légales</a></li>
+                                    ng-reflect-router-link="/"
+                                    href="/">Mentions légales</a></li>
                         </ul>
                     </div>
                 </div>
                 <div  class="col-lg-2 col-md-3 col-sm-6">
                     <div  class="widget">
-                        <h6  class="widget_title">Category</h6>
+                        <h6  class="widget_title">Categorie</h6>
                         <ul  class="widget_links">
-                            <li ><a  href="#">Men</a></li>
-                            <li ><a  href="#">Woman</a></li>
-                            <li ><a  href="#">Kids</a></li>
-                            <li ><a  href="#">Best Saller</a>
-                            </li>
-                            <li ><a  href="#">New Arrivals</a>
-                            </li>
+                            <li ><a  href="#">INFORMATIQUE</a></li>
+                            <li ><a  href="#">ELECTRONIQUE</a></li>
+                            <li ><a  href="#">ACCESSOIRES</a></li>
                         </ul>
                     </div>
                 </div>
                 <div  class="col-lg-2 col-md-6 col-sm-6">
                     <div  class="widget">
-                        <h6  class="widget_title">My Account</h6>
+                        <h6  class="widget_title">Mon compte</h6>
                         <ul  class="widget_links">
                             <li ><a  routerlink="account"
-                                    ng-reflect-router-link="account" href="/account">My Account</a></li>
+                                    ng-reflect-router-link="account" href="/">Mon compte</a></li>
                             <li ><a  routerlink="terms"
-                                    ng-reflect-router-link="terms" href="/terms">Terms</a></li>
+                                    ng-reflect-router-link="terms" href="/terms">Termes et condition</a></li>
                             <li ><a  routerlink="signin"
-                                    ng-reflect-router-link="signin" href="/signin">SignIn</a></li>
+                                    ng-reflect-router-link="signin" href="/signin">Se connecter</a></li>
                             <li ><a  routerlink="signup"
-                                    ng-reflect-router-link="signup" href="/signup">Signup</a></li>
+                                    ng-reflect-router-link="signup" href="/signup">S'inscrire</a></li>
                         </ul>
                     </div>
                 </div>
@@ -86,13 +88,14 @@
                         <ul  class="contact_info contact_info_light">
                             <li ><i 
                                     class="ti-location-pin"></i>
-                                <p >21 Rue Rubens 59800 Lille</p>
+                                <p>Boutique située à Bamako Coura,
+                                    non loin de l'Hôtel Nuima Beleza,
+                                    Résidence DEBE.</p>
                             </li>
-                            <!-- <li ><i  class="ti-email"></i><a
-                                     href="mailto:contact@jstore.fr">contact@jstore.fr</a>
-                            </li> -->
+                            <li ><i  class="ti-email"></i><a href="mailto:info@bamakogadgets.com">info&#64;bamakogadgets.com</a>
+                            </li>
                             <li ><i  class="ti-mobile"></i>
-                                <p >+33 7 49 31 69 74</p>
+                                <p >84 00 89 69</p>
                             </li>
                         </ul>
                     </div>
@@ -103,10 +106,12 @@
     <div  class="bottom_footer border-top-tran">
         <div  class="container">
             <div  class="row">
-                <div  class="col-md-6">
-                    <p  class="mb-md-0 text-center text-md-start"> © 2023 All Rights
-                        Reserved by Espero-Soft Informatiques </p>
+                <div class="col-md-6">
+                    <p class="mb-md-0 text-center text-md-start">
+                        © 2025 Tous droits réservés - Bamako Gadgets
+                    </p>
                 </div>
+
                 <div  class="col-md-6">
                     <ul 
                         class="footer_payment text-center text-lg-end d-flex gap-2 justify-content-end">
