--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -9,16 +9,16 @@
                     <div class="col-lg-6 col-md-10 order-lg-first">
                         <div class="text-center">
                             <div class="error_txt">404</div>
-                            <h5 class="mb-2 mb-sm-3">oops! The page you requested was not found!</h5>
-                            <p>The page you are looking for was moved, removed, renamed or might never existed.</p>
+                            <h5 class="mb-2 mb-sm-3">La page demandée est introuvable !</h5>
+                            <p>La page que vous recherchez a été déplacée, supprimée, renommée ou n'a peut-être jamais existé.</p>
                             <div class="search_form pb-3 pb-md-4">
                                 <form method="post">
-                                    <input name="text" id="text" type="text" placeholder="Search" class="form-control">
+                                    <input name="text" id="text" type="text" placeholder="Rechercher" class="form-control">
                                     <button type="submit" class="btn icon_search"><i
                                             class="ion-ios-search-strong"></i></button>
                                 </form>
                             </div>
-                            <a href="index.html" class="btn btn-fill-out">Back To Home</a>
+                            <a href="#" class="btn btn-fill-out">Retour accueil </a>
                         </div>
                     </div>
                 </div>
