--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header ngSkipHydration></app-header>
 <router-outlet></router-outlet>
+<app-web-notification></app-web-notification>
 <app-footer></app-footer>
