--- a/src/app/components/auth/signin/signin.component.html
+++ b/src/app/components/auth/signin/signin.component.html
@@ -6,39 +6,37 @@
                     <div class="login_wrap">
                         <div class="padding_eight_all bg-white">
                             <div class="heading_s1">
-                                <h3>Login</h3>
+                                <h3>Se connecter</h3>
                             </div>
                             <form novalidate="" ng-reflect-form="[object Object]"
                                 class="ng-untouched ng-pristine ng-invalid">
                                 <div class="form-group mb-3"><input type="text" required="" name="email"
-                                        formcontrolname="email" placeholder="Your Email"
+                                        formcontrolname="email" placeholder="Votre Email"
                                         class="form-control ng-untouched ng-pristine ng-invalid" ng-reflect-required="">
                                 </div>
                                 <div class="form-group mb-3"><input required="" type="password"
-                                        formcontrolname="password" name="password" placeholder="Password"
+                                        formcontrolname="password" name="password" placeholder="Mot de passe"
                                         class="form-control ng-untouched ng-pristine ng-invalid" ng-reflect-required="">
                                 </div>
                                 <div class="login_footer form-group mb-3">
                                     <div class="chek-form">
                                         <div class="custome-checkbox"><input type="checkbox" name="checkbox"
                                                 id="exampleCheckbox1" value="" class="form-check-input"><label
-                                                for="exampleCheckbox1" class="form-check-label"><span>Remember
-                                                    me</span></label></div>
-                                    </div><a href="#">Forgot password?</a>
+                                                for="exampleCheckbox1" class="form-check-label"><span>Se souvenir</span></label></div>
+                                    </div><a href="#">Mot de passe oublie?</a>
                                 </div>
                                 <div class="form-group mb-3"><button type="submit" name="login"
-                                        class="btn btn-fill-out btn-block">Log in</button></div>
+                                        class="btn btn-fill-out btn-block">Connexion</button></div>
                             </form>
                             <div class="different_login"><span>
-                                    or</span></div>
+                                    ou</span></div>
                             <ul class="btn-login list_none text-center">
                                 <li><a href="#" class="btn btn-facebook"><i class="ion-social-facebook"></i>Facebook</a>
                                 </li>
                                 <li><a href="#" class="btn btn-google"><i class="ion-social-googleplus"></i>Google</a>
                                 </li>
                             </ul>
-                            <div class="form-note text-center">Don't Have an Account? <a href="signup.html">Sign up
-                                    now</a></div>
+                            <div class="form-note text-center">Vous n'avez pas de compte? <a href="signup.html">S'inscrire</a></div>
                         </div>
                     </div>
                 </div>
