--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -6,44 +6,48 @@
                     <div  class="login_wrap">
                         <div  class="padding_eight_all bg-white">
                             <div  class="heading_s1">
-                                <h3 >Create an Account</h3>
+                                <h3 >Créer un compte</h3>
                             </div>
                             <form  novalidate="" ng-reflect-form="[object Object]"
                                 class="ng-untouched ng-pristine ng-invalid">
                                 <div  class="form-group mb-3"><input
                                          type="text" required="" formcontrolname="fullName"
-                                        name="fullName" placeholder="Enter Your Name"
-                                        class="form-control ng-untouched ng-pristine ng-invalid" ng-reflect-required=""
-                                        ></div>
+                                        name="fullName" placeholder="Entrer votre prenom"
+                                        class="form-control ng-untouched ng-pristine ng-invalid" ng-reflect-required="">
+                                </div>
+                                <div  class="form-group mb-3"><input
+                                         type="text" required="" formcontrolname="fullName"
+                                        name="fullName" placeholder="Entrer votre nom"
+                                        class="form-control ng-untouched ng-pristine ng-invalid" ng-reflect-required="">
+                                </div>
                                 <div  class="form-group mb-3"><input
                                          type="text" required="" formcontrolname="email"
-                                        name="email" placeholder="Enter Your Email"
+                                        name="email" placeholder="Entrer votre Email"
                                         class="form-control ng-untouched ng-pristine ng-invalid" ng-reflect-required=""
                                         ></div>
                                 <div  class="form-group mb-3"><input
                                          required="" formcontrolname="password"
-                                        type="password" name="password" placeholder="Password"
+                                        type="password" name="password" placeholder="Mot de passe"
                                         class="form-control ng-untouched ng-pristine ng-invalid" ng-reflect-required=""
                                         ></div>
                                 <div  class="form-group mb-3"><input
                                          required="" type="password" name="passwordConfirm"
-                                        placeholder="Confirm Password" class="form-control"></div>
+                                        placeholder="Confirmer mot de passe" class="form-control"></div>
                                 <div  class="login_footer form-group mb-3">
                                     <div  class="chek-form">
                                         <div  class="custome-checkbox"><input
                                                  type="checkbox" name="checkbox"
                                                 id="exampleCheckbox2" value="" class="form-check-input"><label
                                                  for="exampleCheckbox2"
-                                                class="form-check-label"><span >I agree to
-                                                    terms &amp; Policy.</span></label></div>
+                                                class="form-check-label"><span >J'accepte les conditions générales et la politique.</span></label></div>
                                     </div>
                                 </div>
                                 <div  class="form-group mb-3"><button
                                          type="submit" name="register"
-                                        class="btn btn-fill-out btn-block">Register</button></div>
+                                        class="btn btn-fill-out btn-block">S'inscrire</button></div>
                             </form>
                             <div  class="different_login"><span >
-                                    or</span></div>
+                                    ou</span></div>
                             <ul  class="btn-login list_none text-center">
                                 <li ><a  href="#"
                                         class="btn btn-facebook"><i 
@@ -52,8 +56,8 @@
                                         class="btn btn-google"><i 
                                             class="ion-social-googleplus"></i>Google</a></li>
                             </ul>
-                            <div  class="form-note text-center">Already have an account? <a
-                                     href="login.html">Log in</a></div>
+                            <div  class="form-note text-center">Vous avez deja un compte? <a
+                                     href="login.html">Se connecter</a></div>
                         </div>
                     </div>
                 </div>
