--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,20 +1,27 @@
-<div class="product" >
+<div class="product">
     <div class="product_img">
-            <img alt="product_img1" [src]="produitDAO?.imageUrl">  
+        <img [attr.alt]="'Image:' + produitDAO?.designation" [src]="produitDAO?.imageUrl">
+
         <div class="product_action_box">
             <ul class="list_none pr_action_btn">
-                <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i> Ajouter au panier </a>
+                <li>
+                    <a (click)="ajouterAuPanierAcheter($event)">
+                        <i class="fas fa-hand-holding-usd"></i>
+                    </a>
                 </li>
-                <li><a href="#" class="popup-ajax"><i class="icon-shuffle"></i></a></li>
-                <li><a href="#" class="popup-ajax"><i class="icon-magnifier-add"></i></a></li>
-                <li><a href="#"><i class="icon-heart"></i></a></li>
+
+                <li class="add-to-cart">
+                    <a (click)="ajouterAuPanier($event)">
+                        <i class="icon-basket-loaded"></i>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
-    
-    <div class="product_info" (click)="naviguerVersDetailProduit(produitDAO?.slug ?? null)" style="cursor: pointer;">
-        <h6 class="product_title"><a ng-reflect-router-link="#"
-                [routerLink]="['/produitDAO', produitDAO?.slug]"> {{produitDAO?.designation}}
+
+    <div class="product_info">
+        <h6 class="product_title"><a ng-reflect-router-link="#" [routerLink]="['/produitDAO', produitDAO?.slug]">
+                {{produitDAO?.designation}}
             </a></h6>
         <div class="product_price">
             <span class="price">
@@ -27,17 +34,18 @@
                 <span> {{ produitDAO | formatSoldeRate }} de réduction</span>
             </div>
         </div>
-        <div class="rating_wrap">
-            <div class="rating">
-                <div class="product_rate" style="width: 80%;"></div>
-            </div><span class="rating_num">(21)</span>
-        </div>
-        <div class="pr_desc">
-            <p>{{produitDAO?.description}}</p>
-        </div>
-        <div class="pr_switch_wrap">
-            <div class="product_color_switch"><span data-color="#87554B" class="active"></span><span
-                    data-color="#333333"></span><span data-color="#DA323F"></span>
+        <div class="cart_btn row g-2">
+            <div class="col-12 col-md-6">
+                <button type="button" (click)="ajouterAuPanier($event)"
+                    class="btn btn-fill-out btn-addtocart w-100 py-2 btn-sm-text d-inline-flex align-items-center justify-content-center">
+                    <i class="icon-basket-loaded me-2"></i> Panier
+                </button>
+            </div>
+            <div class="col-12 col-md-6">
+                <button type="button" (click)="ajouterAuPanierAcheter($event)"
+                    class="btn btn-fill-out w-100 py-2 btn-sm-text d-inline-flex align-items-center justify-content-center">
+                    <i class="fas fa-hand-holding-usd me-2"></i> Acheter
+                </button>
             </div>
         </div>
     </div>
