--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+/* @import url('https://fonts.goo') */
+
+a{
+    cursor: pointer;
+}
+
+[class^="product_img"] img{
+    aspect-ratio: 600/600;
+    margin:10px
+}
