--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -27,7 +27,9 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="pr_detail">
                         <div class="product_description">
-                            <h4 class="product_title"><a href="">{{produitDAO!.designation}}</a></h4>
+                            <h4 class="product_title">
+                                <a href="">{{produitDAO!.designation}}</a>
+                            </h4>
                             <div class="product_price"><span class="price">{{produitDAO!.prixUnitaire }}
                                     f</span><del>{{produitDAO!.prixRegulier}} f</del>
                                 <div class="on_sale"><span>{{ produitDAO ? (produitDAO | formatSoldeRate) : '' }} de
@@ -40,7 +42,11 @@
                                 </div><span class="rating_num">(21)</span>
                             </div>
                             <div class="pr_desc">
-                                <p> {{produitDAO!.description }} </p>
+                                <p *ngIf="isDescriptionCollapsed">{{ shortDescription }} <span>...</span> </p>
+                                <p>
+                                    <a class="voirPlus" (click)="scrollToDescription()" style="cursor: pointer;">Voir
+                                        plus</a>
+                                </p>
                             </div>
                             <div class="product_sort_info">
                                 <ul>
@@ -77,7 +83,7 @@
                         </div>
                         <hr>
                         <ul class="product-meta" *ngIf="produitDAO">
-                            <li>SKU: <a href="">BE45VGRT</a></li>
+                            <!-- <li>SKU: <a href="">BE45VGRT</a></li> -->
                             <li>Categorie: <a [routerLink]="['/','categorie',produitDAO.categorieStockProdDTO.nom]"
                                     class="text-uppercase">{{produitDAO.categorieStockProdDTO.nom}}</a></li>
                             <li>Caracteristique: <a href="" rel="tag">Impression</a>, <a href="" rel="tag">Scane</a>
@@ -99,7 +105,7 @@
             <div class="row" *ngIf="!produitDAO">
                 <app-awaitloading></app-awaitloading>
             </div>
-            <div class="row">
+            <div class="row" id="scroll">
                 <div class="col-12">
                     <div class="large_divider clearfix"></div>
                 </div>
@@ -119,11 +125,11 @@
                             </li>
                         </ul>
                         <div class="tab-content shop_info_tab">
-                            <div id="Description" role="tabpanel" aria-labelledby="Description-tab"
-                                class="tab-pane fade show active"> Description du
+                            <div role="tabpanel" aria-labelledby="Description-tab" class="tab-pane fade show active">
+                                Description du
                                 {{produitDAO?.description }} </div>
                             <div id="Additional-info" role="tabpanel" aria-labelledby="Additional-info-tab"
-                                class="tab-pane fade"> {{produitDAO?.description }} </div>
+                                class="tab-pane fade"> {{produitDAO?.info }} </div>
                             <div id="Reviews" role="tabpanel" aria-labelledby="Reviews-tab" class="tab-pane fade">
                                 <div class="comments">
                                     <h5 class="product_tab_title">2 Avis Pour <span>{{produitDAO?.designation }}</span>
